# py-simple-plugin-loader

./: .gitignore  Pipfile  README.md  environment.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: release_pypi.yml
plugin_loader/: loader.py  sample_plugin.py
simple_plugin_loader/: __init__.py  loader.py  sample_plugin.py
tests/: test_plugin_loading.py  test_sample_plugin.py
tests/test_plugins/: plugin1.py  plugin2_with_errors.py  plugin3_no_subclass.py  test_plugin_main.py
tests/test_plugins/complex_plugin/: plugin_with_external_dep.py
tests/test_plugins/complex_plugin/package/: dependency.py
tests/test_plugins/dir_with_only_package/plugin/: simple_plugin.py
tests/test_plugins/not-a-python-package/: plugin.py
tests/test_plugins/sub_plugin1/: sub_plugin1.py
tests/test_plugins/sub_plugin2/: plugin1.py
