[project]
name = "simple-plugin-loader"
dynamic = [ "version" ]
description = "Dynamically load other python modules to your project."
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Marc Ammon", email = "marc.ammon@hotmail.de" }
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "simple-classproperty (>=3.0)",
]

[project.urls]
homepage = "https://github.com/mammo0/py-simple-plugin-loader"


[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
metadata = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
